--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ aside .menu-sx {
     display: flex;
     flex-direction:column;
     width: 150px;
-    height: 100%;
+    height: calc(100% - 70px);
     background-color: black;
     color: lightgray;
     padding-left: 15px;
@@ -138,7 +138,7 @@ header .reg-bar a {
 /* CORE HEADER */
 main {
     width: 100%;
-    height: calc(100% - 70px);
+    height: calc(100% - 140px);
     background-color: #1d283a;
     color: white;
     padding-left: 25px;
@@ -190,7 +190,7 @@ nav li a {
     display: flex;
     justify-content:flex-start;
     flex-wrap: wrap;
-    padding-top: 30px;
+    padding: 30px 0;
 
 }
 
