--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 .container {
     display: flex;
+    max-width: 1200px;
 }
 
 aside .menu-sx {
@@ -154,6 +155,7 @@ main h1 {
 main p {
     font-size: 20px;
     color: lightgray;
+    padding-bottom: 20px;
 }
 
 nav {
@@ -225,12 +227,98 @@ nav li a {
     position:relative;
 }
 
-.player {
-    /* display:flex; */
-    /* align-self: flex-end; */
+.player-bar {
+    display:flex;
+    flex-direction: row;
     width: 100vw;
     height: 70px;
-    background-color: blue;
+    background-color:  	#505050;
     position:fixed;
     bottom:0;
+    color: white;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.player-bar-sx {
+    display: flex;
+    align-items: center;
+}
+
+.player-bar .mini-portrait {
+    display: flex;
+    align-items: center;
+    padding-left: 20px;
+}
+
+.player-bar .mini-copertina {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+.player-bar .player-song {
+    padding-right: 40px
+}
+
+.player-bar .icons .far {
+    padding: 0 10px;
+}
+
+.player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.player .player-up {
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+}
+
+.player .player-up .fas {
+    padding: 10px 20px;
+}
+
+.player .player-down {
+    display: flex;
+    align-items: center;
+}
+
+.player .player-down p {
+    padding: 0 10px;
+}
+
+.linea {
+    width: 300px;
+    height: 5px;
+    background-color: #707070;
+    position:relative;
+}
+
+.linea::before {
+    content:" ";
+    width: 25px;
+    height: 5px;
+    background-color: lightgray;
+    position:absolute;
+    top:0;
+    left: 0;
+}
+
+.player-bar-dx {
+    display: flex;
+    align-items: center;
+    margin-right: 20px;
+}
+
+.player-bar-dx .fas {
+    padding: 0 10px;
+    color: white;
+}
+
+.player-bar-dx .linea {
+    width: 170px;
 }
